--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Aashish_Alag" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
+  <meta name="twitter:title" content="Desinger | Techfreak | Explorer | Minimalist " />
   <meta name="twitter:description" content="Mechanical Engineer" />
-  <meta name="twitter:url" content="https://twitter.com/Aashish_bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/Aashish_Singh_ALag" />
   <meta name="author" content="Aashish Singh Alag" />
   <meta name="description" content="Mechanical Engineer with a passion for systems design and automation." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -142,7 +142,7 @@
         <!-- <a aria-label="Open Aashish's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Aashish's resume in a new tab" href="https://asinghalag.github.io/assets/resume/Aashish_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Aashish's resume in a new tab" href="https://asinghalag.github.io/assets/resume/AASHISH_SINGH_ALAG_LATEST.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -221,7 +221,7 @@
                 </button>
               </a>
 
-              <!-- <a href="https://angel.co/u/Aashish_bhogayata" target="_blank">
+              <!-- <a href="https://angel.co/u/Aashish_Singh_Alag" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
                 </button>
