project initial add

--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Aashish Singh Alag.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#00124d"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Driven and proactive mechanical engineer with a passion for designing and automating systems. Skilled in control systems and motivated by a curiosity to solve complex, real-world engineering challenges.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/asinghalag" target="_blank">
+              <a href="https://www.linkedin.com/in/aashish-singh-alag-a609b8319/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
@@ -321,7 +321,6 @@
               <li>
                 Developed precise assembly instructions that improved user comprehension allowing seamless construction for young learners and educators.
               </li>
-
               </li>
                 Implemented CAD-driven design optimizations, reducing material usage by 20% and improving stencil durability for repeated classroom use.
               </li>
@@ -348,10 +347,10 @@
                 <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Music Player Web-App<i
+                <span class="card-title activator teal-text hoverline">Open-Sourced Hexapod Simulator<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A music streaming web app based on Django
+                  A simulator for  real-time kinematic analysis and control.
                 </p>
               </div>
               <div class="card-reveal">
@@ -360,23 +359,19 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Search and filter songs based on language and singer.</li>
-                  <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                  <li>Scroll through recently played/viewed songs.</li>
+                  <li><b>Tools:</b> Python, MATLAB, Dash, Matplotlib</li>
+                  <li>Developed a simulator for stationary hexapod robots with Forward and Inverse Kinematics.</li>
+                  <li>Designed and modeled leg kinematics using transformation matrices.</li>
+                  <li>Created an interactive GUI for real-time control over joint angles and gait patterns.</li>
+                  
 
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="./assets/projects/Hexapod Simulator/Hexapod_Simulator.html" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/asinghalag/music-player"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -875,10 +870,10 @@
               target="_blank">github.com/asinghalag</a></a>
         </p>
         <p>
-          <a aria-label="View Aashish on LinkedIn" href="http://linkedin.com/in/asinghalag" target="_blank"
+          <a aria-label="View Aashish on LinkedIn" href="https://www.linkedin.com/in/aashish-singh-alag-a609b8319/" target="_blank"
             data-position="top" data-tooltip="View Aashish on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Aashish on LinkedIn" href="http://linkedin.com/in/asinghalag"
+              class="fa fa-linkedin"></i><a aria-label="Aashish on LinkedIn" href="https://www.linkedin.com/in/aashish-singh-alag-a609b8319/"
               class="hoverline" target="_blank">linkedin.com/in/asinghalag</a></a>
         </p>
       </div>
