--- a/index.html
+++ b/index.html
@@ -452,14 +452,14 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                <img alt="Screenshot of web app" src="/assets/img/quadrotor.png"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Blog Web-App<i
+                <span class="card-title activator teal-text hoverline">Quadrotor Controller for UAV Capture<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A simple and extensible blog web-app based on Flask.
+                  LQR-based control system for intercepting UAVs in restricted airspace
                 </p>
               </div>
               <div class="card-reveal">
@@ -468,21 +468,17 @@
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, Flask, SQLAlchemy, Postgresql, Python</li>
-                  <li>Users can view posts and contact the admin via Contact Page.</li>
-                  <li>Admin can Add, Delete, Update posts.</li>
+                  <li>Developed an LQR-based control system to intercept UAVs in restricted airspace.</li>
+                  <li>Implemented dynamic control adjustments for precise interception.</li>
+                  <li>Simulated and tested the controller on complex UAV trajectories.</li>
 
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
+                  <a aria-label="Visit Blog website" href="./assets/projects/Quadrotor Controller/Quadrotor.html" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/asinghalag/flask-blog"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -785,26 +781,18 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.wpi.edu/" target="_blank" class="teal-text hoverline">Worcester Polytechnic Institute</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Worcester, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Master of Science in Mechanical Engineering      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>Graduation Year: </b>2024
+                  <br>
+                  <b>GPA: </b>3.85/4.00
                 </p>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
-                  </ul>
-                  </p>
-
-                </ul>
+                
               </div>
             </div>
 
@@ -814,29 +802,16 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="https://www.wpi.edu/" target="_blank" class="teal-text hoverline">Worcester Polytechnic Institute</a></span>
                 </p>
                 <p class="brown-text">Ahmedabad, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Science in Mechanical Engineering
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>Graduation Year: </b>2024
+                  <br>
+                  <b>GPA: </b>3.83/4.00
                 </p>
-
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
-
-                </ul>
               </div>
             </div>
           </div>
@@ -851,13 +826,13 @@
         <p>
           <a aria-label="Call Aashish" data-position="top" data-tooltip="Call Aashish"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Aashish">+14805722456</a></a>
+              aria-label="Call Aashish">+17744153970</a></a>
         </p>
         <p>
           <a aria-label="Email Aashish" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Aashish" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Aashish" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="hoverline">aalag@wpi.edu</a></a>
         </p>
         <p>
           <a aria-label="View Aashish on GitHub" href="http://github.com/asinghalag" target="_blank"
