--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/quadrotor.png"
+                <img alt="Screenshot of web app" src="/assets/img/Quadrotor.png"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
@@ -640,7 +640,7 @@
         <!-- Languages and Databases -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Languages and Databases</h4>
+            <h4 class="brown-text light">Languages</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
@@ -652,63 +652,52 @@
                 <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="/assets/img/Matlab.png" class="responsive-img" />MATLAB
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
-              </div>
+              
             </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Libraries</h4>
+            <h4 class="brown-text light">CAD/CAM</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="/assets/img/Solidworks.png" class="responsive-img" />SolidWorks
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="/assets/img/Autodesk.png" class="responsive-img" />Autodesk
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="/assets/img/Creo.png" class="responsive-img" />Creo
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+                <img alt="" src="/assets/img/Fusion360.png" class="responsive-img" />Fusion 360
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                <img alt="" src="/assets/img/Esprit.png" class="responsive-img" />Esprit
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Frameworks -->
+        <!-- Simulation -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Frameworks</h4>
+            <h4 class="brown-text light"> Systems & Simulation </h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+                <img alt="" src="/assets/img/ansys.png" class="responsive-img" />Ansys
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
+                <img alt="" src="/assets/img/Raspberry Pi.png" class="responsive-img" />Raspberry Pi
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
+                <img alt="" src="/assets/img/Arduino.png" class="responsive-img" />Arduino
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+                <img alt="" src="/assets/img/Multisim.png" class="responsive-img" />Multisim
               </div>
             </div>
           </div>
@@ -717,18 +706,18 @@
         <!-- Other -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
+            <h4 class="brown-text light"> Prototyping & Other</h4>
             <div class="row text-center">
 
 
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
+                <img alt="" src="/assets/img/Creality.png" class="responsive-img" />FDM Printing
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
+                <img alt="" src="/assets/img/Elegoo.png" class="responsive-img" />Resin Printing
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
+                <img alt="" src="/assets/img/Machining.png" class="responsive-img" /> Laser Cutting, CNC, Lathes, Etc.
               </div>
             </div>
           </div>
