--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                 <img alt="" src="/assets/img/Fusion360.png" class="responsive-img" />Fusion 360
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/Esprit.png" class="responsive-img" />Esprit
+                <img alt="" src="/assets/img/ESPRIT.png" class="responsive-img" />Esprit
               </div>
             </div>
           </div>
@@ -688,7 +688,7 @@
             <h4 class="brown-text light"> Systems & Simulation </h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/ansys.png" class="responsive-img" />Ansys
+                <img alt="" src="/assets/img/Ansys.png" class="responsive-img" />Ansys
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/Raspberry Pi.png" class="responsive-img" />Raspberry Pi
@@ -772,7 +772,7 @@
                 <p>
                   <span class="card-title"><a href="https://www.wpi.edu/" target="_blank" class="teal-text hoverline">Worcester Polytechnic Institute</a></span>
                 </p>
-                <p class="brown-text">Worcester, USA</p>
+                <p class="brown-text">Worcester, MA</p>
                 <p>
                   <b>Degree: </b>Master of Science in Mechanical Engineering      
                   <br>
@@ -793,7 +793,7 @@
                 <p>
                   <span class="card-title"><a href="https://www.wpi.edu/" target="_blank" class="teal-text hoverline">Worcester Polytechnic Institute</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Worcester, MA</p>
                 <p>
                   <b>Degree: </b>Bachelor of Science in Mechanical Engineering
                   <br>
@@ -818,9 +818,9 @@
               aria-label="Call Aashish">+17744153970</a></a>
         </p>
         <p>
-          <a aria-label="Email Aashish" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Aashish" href="mailto:aalag@wpi.edu" target="_blank" data-position="top"
             data-tooltip="Email Aashish" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Aashish" href="mailto:vbhogayata@gmail.com"
+              class="fa fa-envelope"></i><a aria-label="Email Aashish" href="mailto:aalag@wpi.edu"
               class="hoverline">aalag@wpi.edu</a></a>
         </p>
         <p>
