--- a/index.html
+++ b/index.html
@@ -314,17 +314,14 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Design Engineering Intern</div>
             <ul>
               <li>
                 Designed and produced laser-cut stencils for STEM educational toys, enhancing hands-on learning for children aged 6–12.
               </li>
-              <li>
-                Developed precise assembly instructions that improved user comprehension allowing seamless construction for young learners and educators.
-              </li>
-              </li>
-                Implemented CAD-driven design optimizations, reducing material usage by 20% and improving stencil durability for repeated classroom use.
-              </li>
+              <li>Developed precise assembly instructions that improved user comprehension allowing seamless construction for young learners and educators.</li>
+              <li>Implemented CAD-driven design optimizations, reducing material usage by 20% and improving stencil durability for repeated classroom use.</li>
+              
          
             </ul>
           </div>
