--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
               <a href="#contact" class="contactme">Contact Me</a>
-              <a href="./assets/resume/AASHISH_SINGH_ALAG_LATEST.pdf" class="Resume">Resume📄</a>
+              <a href="./assets/resume/AASHISH_SINGH_ALAG_LATEST.pdf" class="contactme">Resume📄</a>
             </div>
           </div>
         </div>
