--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Control Systems Enthusiast", "Technician", "Adaptive Problem Solver", "Fast Learner"],
+      strings: ["Control Systems Enthusiast", "Technician", "Problem Solver", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
