--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/Hexapod.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="music streaming app" src="./assets/projects/Hexapod Simulator/forward_kinematics.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Open-Sourced Hexapod Simulator<i
@@ -378,7 +378,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Koalby_AVA" src="/assets/img/Humanoid.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Koalby_AVA" src="./assets/projects/Koalby & Ava/Complete.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">3D Printed Humanoid Robot<i
@@ -450,7 +450,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/Quadrotor.png"
+                <img alt="Screenshot of web app" src="./assets/projects/Quadrotor Controller/Quadrotor.png"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
@@ -486,7 +486,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Forceamp.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="./assets/projects/Force Amplification/Force.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Force Amplification System<i
@@ -522,7 +522,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/RC_Car.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="./assets/projects/Autonomous RC car/RC_Car.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Autonomous RC Car<i
